--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 body{
     min-height: 100vh;
-    background: url('/images/placeholder.jpg') center/cover no-repeat; 
+    background: url('images/placeholder.jpg') center/cover no-repeat; 
     background-size: cover;
 }
 
